kubernetes_manifest/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devops
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitops
---

apiVersion: v1
kind: Namespace
metadata:
  name: services
---
apiVersion: v1
kind: Namespace
metadata:
  name: recommendation
---
apiVersion: v1
kind: Namespace
metadata:
  name: ai
---
apiVersion: v1
kind: Namespace
metadata:
  name: streaming
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitops
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
