kubernetes_manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-alb
  namespace: services
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing     # private istersen: internal
    alb.ingress.kubernetes.io/target-type: ip             # EKS’te önerilen: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8501
